tests/compile_failures/attributes/invalid_list_values.rs
use dioxus_sugar::attributes;

#[attributes(add(div, "span"))]
struct Props {}

fn main() {}