tests/compile_failures/attributes/invalid_list_values.stderr
error: not valid for attribute or tag
 --> tests/compile_failures/attributes/invalid_list_values.rs:3:14
  |
3 | #[attributes(add(div, "span"))]
  |              ^^^^^^^^^^^^^^^^
